finish java microservice to sign xml string correctly